feature/routing: add routing for different user pages

--- a/src/styles.less
+++ b/src/styles.less
@@ -6,4 +6,9 @@ body {
   height: 100%;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background: #fafafa;
+
+  .display-card {
+    margin: 100px 10% 0 10%;
+    border: 1px solid #e2e2e2;
+  }
 }
