--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header *ngIf="signedInUser"></app-header>
 <div>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
