--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,43 @@
 <mat-card>
-    <mat-card-title>Login</mat-card-title>
-<mat-card-content>
-<form [formGroup]="form" (ngSubmit)="submit()">
-    <p>
-    <mat-form-field>
-        <input type="text" matInput placeholder="Username" formControlName="username">
-    </mat-form-field>
-    </p>
-    <p>
-    <mat-form-field>
-        <input type="password" matInput placeholder="Password" formControlName="password">
-    </mat-form-field>
-    </p>
-    <!-- <p *ngIf="error" class="loginError">
-        {{ errorMessage }}
-    </p> -->
-    <p class="button">
+  <mat-card-title>Login</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <p>
+        <mat-form-field>
+          <input
+            type="email"
+            matInput
+            placeholder="E-mail"
+            formControlName="email"
+          />
+          <mat-error *ngIf="form.get('email').hasError('email')">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="form.get('email').hasError('required')">
+            Email is required
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field>
+          <input
+            type="password"
+            matInput
+            placeholder="Password"
+            formControlName="password"
+          />
+          <mat-error *ngIf="form.get('password').hasError('required')">
+            Password is required
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <p *ngIf="loginError" class="loginError">
+        {{ loginError }}
+      </p>
+      <p class="button">
         <button type="submit" mat-raised-button>Login</button>
-    </p>
-</form>
-</mat-card-content>
-<div>{{ loginMessage }}</div>
+      </p>
+    </form>
+  </mat-card-content>
+  <div>{{ loginMessage }}</div>
 </mat-card>
