--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,6 @@
 <mat-card class="display-card">
   <h1>Sveiki, jūs prisijungėtė kaip {{ user.role }}</h1>
 </mat-card>
+<agm-map [latitude]="lat" [longitude]="lng">
+  <agm-direction [origin]="origin" [destination]="destination"> </agm-direction>
+</agm-map>
