--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,3 +1,38 @@
 <mat-card class="display-card">
-    <h1>Administratoriaus užsakymų sąrašas</h1>
+  <h1>Administratoriaus užsakymų sąrašas</h1>
 </mat-card>
+
+<table mat-table [dataSource]="orders" class="mat-elevation-z8">
+  <ng-container matColumnDef="orderTime">
+    <th mat-header-cell *matHeaderCellDef>Order time</th>
+    <td mat-cell *matCellDef="let order">{{ order.order_time }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="deliveryTime">
+    <th mat-header-cell *matHeaderCellDef>Delivery Time</th>
+    <td mat-cell *matCellDef="let order">{{ order.delivery_time }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="senderAddress">
+    <th mat-header-cell *matHeaderCellDef>Sender address</th>
+    <td mat-cell *matCellDef="let order">{{ order.address_from }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="receiverAddress">
+    <th mat-header-cell *matHeaderCellDef>Receiver address</th>
+    <td mat-cell *matCellDef="let order">{{ order.address_to }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let order">{{ order.status }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let order">{{ order.price }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
