--- a/src/styles.less
+++ b/src/styles.less
@@ -7,7 +7,10 @@ body {
   background: #fafafa;
 
   .display-card {
-    margin: 100px 10% 0 10%;
+    margin: 50px 0;
     border: 1px solid #e2e2e2;
+  }
+  table {
+    width: 100%;
   }
 }
