Add user data table.

--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,5 +1,5 @@
 <mat-card class="display-card">
-  <h1>Administratoriaus užsakymų sąrašas</h1>
+  <h1>Užsakymų sąrašas</h1>
 </mat-card>
 
 <table mat-table [dataSource]="orders" class="mat-elevation-z8">
