--- a/src/app/app-header/header.component.html
+++ b/src/app/app-header/header.component.html
@@ -5,7 +5,7 @@
 
   <div *ngIf="role === 'Admin'">
     <button mat-button routerLink="/admin/orders" routerLinkActive="active">
-      Užskaymai
+      Užsakymai
     </button>
     <button mat-button routerLink="/admin/users" routerLinkActive="active">
       Vartotojai
