--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,3 +1,63 @@
 <mat-card class="display-card">
-    <h1>Administratoriaus vartotojų sąrašas</h1>
+    <h1>Vartotojų sąrašas</h1>
 </mat-card>
+
+<table mat-table [dataSource]="users" class="mat-elevation-z8">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>Id</th>
+    <td mat-cell *matCellDef="let order">{{ order.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="personalcode">
+    <th mat-header-cell *matHeaderCellDef>Personal code</th>
+    <td mat-cell *matCellDef="let order">{{ order.personal_code }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="username">
+    <th mat-header-cell *matHeaderCellDef>Username</th>
+    <td mat-cell *matCellDef="let order">{{ order.username }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="firstname">
+    <th mat-header-cell *matHeaderCellDef>Firstname</th>
+    <td mat-cell *matCellDef="let order">{{ order.firstname }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="lastname">
+    <th mat-header-cell *matHeaderCellDef>Lastname</th>
+    <td mat-cell *matCellDef="let order">{{ order.lastname }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let order">{{ order.email }}</td>
+  </ng-container>  
+  
+  <ng-container matColumnDef="department">
+    <th mat-header-cell *matHeaderCellDef>Department</th>
+    <td mat-cell *matCellDef="let order">{{ order.department }}</td>
+  </ng-container> 
+
+   <ng-container matColumnDef="registerdate">
+    <th mat-header-cell *matHeaderCellDef>Register date</th>
+    <td mat-cell *matCellDef="let order">{{ order.register_date }}</td>
+  </ng-container> 
+  
+  <ng-container matColumnDef="birthdate">
+    <th mat-header-cell *matHeaderCellDef>Birth date</th>
+    <td mat-cell *matCellDef="let order">{{ order.birthdate }}</td>
+  </ng-container>  
+  
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let order">{{ order.status }}</td>
+  </ng-container> 
+
+  <ng-container matColumnDef="workplace">
+    <th mat-header-cell *matHeaderCellDef>Workplace</th>
+    <td mat-cell *matCellDef="let order">{{ order.workplace }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
