--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,5 +1,5 @@
 <mat-card class="display-card">
-  <h1>Užsakymų sąrašas</h1>
+  <h1>Orders</h1>
 </mat-card>
 
 <table mat-table [dataSource]="orders" class="mat-elevation-z8">
@@ -31,6 +31,13 @@
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef>Price</th>
     <td mat-cell *matCellDef="let order">{{ order.price }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell  *matHeaderCellDef class="center"> Action </th>
+    <td mat-cell *matCellDef="let row" class="center" >
+      <button type="submit" mat-raised-button class="button">More information</button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
