--- a/src/app/admin/users/users.component.less
+++ b/src/app/admin/users/users.component.less
@@ -1,7 +1,12 @@
 .display-card{
     text-align: center;
+    width: 107.5%;
 }
 
-.mat-elevation-z8{
-    text-align: center;
+.button{
+    background-color:#2eb82e;
+}
+
+table {
+    width: 110%;
 }
