--- a/src/app/admin/suppliers/suppliers.component.html
+++ b/src/app/admin/suppliers/suppliers.component.html
@@ -20,8 +20,8 @@
   
     <ng-container matColumnDef="actions">
       <th mat-header-cell  *matHeaderCellDef class="center"> Action </th>
-      <td mat-cell *matCellDef="let row" class="center" >
-        <button type="submit" mat-raised-button class="button">Remove</button>
+      <td mat-cell *matCellDef="let supplier" class="center" >
+        <button type="submit" (click) = 'submit(supplier.id)' mat-raised-button class="button">Remove</button>
       </td>
     </ng-container>
   
