Add button (New user, New supplier)

--- a/src/app/admin/suppliers/suppliers.component.html
+++ b/src/app/admin/suppliers/suppliers.component.html
@@ -1,6 +1,9 @@
 <mat-card class="display-card">
     <h1>Suppliers</h1>
 </mat-card>
+
+<button type="submit" mat-raised-button class="button2">New supplier</button>
+<p></p>
   
   <table mat-table [dataSource]="suppliers" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
