--- a/src/app/admin/users/users.component.less
+++ b/src/app/admin/users/users.component.less
@@ -4,7 +4,11 @@
 }
 
 .button{
-    background-color:#2eb82e;
+    background-color:#32ca32;
+}
+
+.button2 {
+    background-color:springgreen;
 }
 
 table {
