--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -63,8 +63,8 @@
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell  *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let row" >
-      <button type="submit" class="button" mat-raised-button>Change Status</button>
+    <td mat-cell *matCellDef="let user" >
+      <button type="submit" class="button" mat-raised-button (click) = "openDialog(user.id)">Change Status</button>
     </td>
   </ng-container>
 
@@ -72,7 +72,3 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
-
-<script>
-  
-</script>
