--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -34,9 +34,15 @@
   </ng-container>
 
   <ng-container matColumnDef="actions">
-    <th mat-header-cell  *matHeaderCellDef class="center"> Action </th>
-    <td mat-cell *matCellDef="let row" class="center" >
-      <button type="submit" mat-raised-button class="button">More information</button>
+    <th mat-header-cell *matHeaderCellDef class="center">Action</th>
+    <td mat-cell *matCellDef="let order" class="center">
+      <button
+        mat-raised-button
+        class="button"
+        (click)="getOrderInformation(order.id)"
+      >
+        More information
+      </button>
     </td>
   </ng-container>
 
