feature/admin-funkcijos: style fixes

--- a/src/app/admin/orders/order/order.component.html
+++ b/src/app/admin/orders/order/order.component.html
@@ -63,6 +63,6 @@
     <mat-spinner *ngIf="!orderInformation"></mat-spinner>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="close()">Close</button>
+    <button mat-flat-button color="primary" (click)="close()">Close</button>
   </div>
 </div>
