--- a/src/styles.less
+++ b/src/styles.less
@@ -11,6 +11,10 @@ body {
     border: 1px solid #e2e2e2;
   }
   table {
-    width: 100%;
+    width: 100% !important;
+  }
+  mat-spinner {
+    position: relative;
+    left: 50%;
   }
 }
