--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -37,8 +37,8 @@
     <th mat-header-cell *matHeaderCellDef class="center">Action</th>
     <td mat-cell *matCellDef="let order" class="center">
       <button
-        mat-raised-button
-        class="button"
+        mat-flat-button
+        color="primary"
         (click)="getOrderInformation(order.id)"
       >
         More information
@@ -49,3 +49,4 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+<mat-spinner *ngIf="!orders"></mat-spinner>
