--- a/src/app/admin/pharmacies/pharmacies.component.html
+++ b/src/app/admin/pharmacies/pharmacies.component.html
@@ -23,8 +23,8 @@
     <td mat-cell *matCellDef="let pharmacy" class="center">
       <button
         (click)="getOrderInformation(pharmacy.id)"
-        mat-raised-button
-        class="button"
+        mat-flat-button
+        color="primary"
       >
         Report
       </button>
@@ -34,3 +34,4 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+<mat-spinner *ngIf="!pharmacies"></mat-spinner>
