--- a/src/app/admin/users/status/status.component.html
+++ b/src/app/admin/users/status/status.component.html
@@ -1,12 +1,14 @@
-<h4 style="text-align: center;">Select user status</h4>
-<mat-form-field appearance="fill" style="text-align: center; border: 5px;">
-  <mat-label>{{line}}</mat-label>
+<h1 mat-dialog-title>Change user status</h1>
+<mat-form-field>
+  <mat-label>Status</mat-label>
   <mat-select [(value)]="selectedStatus">
-    <mat-option></mat-option>
-    <mat-option [value]="status.id" *ngFor="let status of userStatus">{{ status.name }}</mat-option>
+    <mat-option [value]="status.id" *ngFor="let status of userStatus">
+      {{ status.name }}</mat-option
+    >
   </mat-select>
-  <mat-dialog-actions style="text-align: right;">
-    <button mat-button [mat-dialog-close]="true" style="position: relative; left: 5px;" (click)="setUserStatus()">   Change</button>
-    <button mat-button [mat-dialog-close]="true" style="position: relative; left: 15px;">Close</button>
-  </mat-dialog-actions>
 </mat-form-field>
+<div mat-dialog-actions>
+  <button mat-flat-button color="primary" (click)="setUserStatus()">
+    Change
+  </button>
+</div>
