--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,8 +1,8 @@
 <mat-card class="display-card">
-    <h1>Users</h1>
+  <h1>Users</h1>
 </mat-card>
 
-<button type="submit" mat-raised-button class="button2" (click)="onCreate()">New user</button>
+<button mat-flat-button color="primary" (click)="onCreate()">New user</button>
 <p></p>
 
 <table mat-table [dataSource]="users" class="mat-elevation-z8">
@@ -34,27 +34,27 @@
   <ng-container matColumnDef="email">
     <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let user">{{ user.email }}</td>
-  </ng-container>  
-  
+  </ng-container>
+
   <ng-container matColumnDef="department">
     <th mat-header-cell *matHeaderCellDef>Department</th>
     <td mat-cell *matCellDef="let user">{{ user.department }}</td>
-  </ng-container> 
+  </ng-container>
 
-   <ng-container matColumnDef="registerdate">
+  <ng-container matColumnDef="registerdate">
     <th mat-header-cell *matHeaderCellDef>Register date</th>
     <td mat-cell *matCellDef="let user">{{ user.register_date }}</td>
-  </ng-container> 
-  
+  </ng-container>
+
   <ng-container matColumnDef="birthdate">
     <th mat-header-cell *matHeaderCellDef>Birth date</th>
     <td mat-cell *matCellDef="let user">{{ user.birthdate }}</td>
-  </ng-container>  
-  
+  </ng-container>
+
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let user">{{ user.status }}</td>
-  </ng-container> 
+  </ng-container>
 
   <ng-container matColumnDef="workplace">
     <th mat-header-cell *matHeaderCellDef>Workplace</th>
@@ -62,13 +62,15 @@
   </ng-container>
 
   <ng-container matColumnDef="actions">
-    <th mat-header-cell  *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let user" >
-      <button type="submit" class="button" mat-raised-button (click) = "openDialog(user.id)">Change Status</button>
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let user">
+      <button mat-flat-button color="primary" (click)="openDialog(user.id)">
+        Change Status
+      </button>
     </td>
   </ng-container>
-
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+<mat-spinner *ngIf="!users"></mat-spinner>
