feature/admin-funkcijos: fixed typo

--- a/src/app/admin/orders/order/order.component.html
+++ b/src/app/admin/orders/order/order.component.html
@@ -20,7 +20,7 @@
           >{{ orderInformation.order.order_time }}</mat-list-item
         >
         <mat-list-item role="listitem"
-          ><b>Delvivery Date:&nbsp;</b
+          ><b>Delivery Date:&nbsp;</b
           >{{ orderInformation.order.delivery_time }}</mat-list-item
         >
         <mat-list-item role="listitem"
