feature/deliveryman: isveziotojo posisteme

--- a/src/styles.less
+++ b/src/styles.less
@@ -17,4 +17,8 @@ body {
     position: relative;
     left: 50%;
   }
+  .green-snackbar {
+    background-color: #468847;
+    color: #fff;
+  }
 }
