--- a/src/app/deliveryman/orders/orders.component.html
+++ b/src/app/deliveryman/orders/orders.component.html
@@ -34,7 +34,7 @@
   </ng-container>
 
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef class="center">Action</th>
+    <th mat-header-cell *matHeaderCellDef class="center"></th>
     <td mat-cell *matCellDef="let order" class="center">
       <button
         mat-icon-button
@@ -45,13 +45,24 @@
       </button>
       <mat-menu #menu="matMenu">
         <button (click)="getOrderInformation(order.id)" mat-menu-item>
-          Info
+          Check delivery
         </button>
-        <button (click)="getOrderInformation(order.id)" mat-menu-item>
+        <button
+          *ngIf="order.status != 'Delivering'"
+          (click)="changeStatus(order.id)"
+          mat-menu-item
+        >
           Change Status
         </button>
-        <button (click)="getOrderInformation(order.id)" mat-menu-item>
+        <button (click)="delayOrder(order.id)" mat-menu-item>
           Delay Delivery
+        </button>
+        <button
+          (click)="cancelOrder(order.id)"
+          mat-menu-item
+          class="cancel-button"
+        >
+          Cancel Order
         </button>
       </mat-menu>
     </td>
