--- a/src/app/storeman/stock/stock.component.html
+++ b/src/app/storeman/stock/stock.component.html
@@ -1,3 +1,46 @@
 <mat-card class="display-card">
-    <h1>Sandelėninko likučių sąrašas</h1>
+  <h1>Sandelėninko likučių sąrašas</h1>
 </mat-card>
+<table mat-table [dataSource]="stockList" class="mat-elevation-z8">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>id</th>
+    <td mat-cell *matCellDef="let stockItem">{{ stockItem.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let stockItem">{{ stockItem.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let stockItem">{{ stockItem.price }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="quantity">
+    <th mat-header-cell *matHeaderCellDef>Quantity</th>
+    <td mat-cell *matCellDef="let stockItem">{{ stockItem.quantity }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="inSale">
+    <th mat-header-cell *matHeaderCellDef>In Sale</th>
+    <td mat-cell *matCellDef="let stockItem">{{ stockItem.inSale }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="center">Action</th>
+    <td mat-cell *matCellDef="let stockItem" class="center">
+      <button
+        mat-flat-button
+        color="primary"
+        (click)="changeStockItemStatus(stockItem.id)"
+      >
+        Change Status
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-spinner *ngIf="!stockList"></mat-spinner>
