--- a/src/app/storeman/medicine-list/medicine-list.component.html
+++ b/src/app/storeman/medicine-list/medicine-list.component.html
@@ -9,22 +9,22 @@
 
   <ng-container matColumnDef="activeSubstance">
     <th mat-header-cell *matHeaderCellDef>Active Substance</th>
-    <td mat-cell *matCellDef="let medicine">{{ medicine.active_substance }}</td>
+    <td mat-cell *matCellDef="let medicine">{{ medicine.activeSubstance }}</td>
   </ng-container>
 
   <ng-container matColumnDef="barCode">
     <th mat-header-cell *matHeaderCellDef>Bar Code</th>
-    <td mat-cell *matCellDef="let medicine">{{ medicine.bar_code }}</td>
+    <td mat-cell *matCellDef="let medicine">{{ medicine.barCode }}</td>
   </ng-container>
 
   <ng-container matColumnDef="recipeRequired">
     <th mat-header-cell *matHeaderCellDef>Recipe Required?</th>
-    <td mat-cell *matCellDef="let medicine">{{ medicine.recipe_required }}</td>
+    <td mat-cell *matCellDef="let medicine">{{ medicine.recipeRequired }}</td>
   </ng-container>
 
   <ng-container matColumnDef="isReimbursed">
     <th mat-header-cell *matHeaderCellDef>Reimbursed?</th>
-    <td mat-cell *matCellDef="let medicine">{{ medicine.is_reimbursed }}</td>
+    <td mat-cell *matCellDef="let medicine">{{ medicine.isReimbursed }}</td>
   </ng-container>
 
   <ng-container matColumnDef="country">
@@ -35,6 +35,11 @@
   <ng-container matColumnDef="form">
     <th mat-header-cell *matHeaderCellDef>Form</th>
     <td mat-cell *matCellDef="let medicine">{{ medicine.form }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="inSale">
+    <th mat-header-cell *matHeaderCellDef>In Sale?</th>
+    <td mat-cell *matCellDef="let medicine">{{ medicine.inSale }}</td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
