error messages, succes messages

--- a/src/app/app-header/header.component.html
+++ b/src/app/app-header/header.component.html
@@ -5,16 +5,16 @@
 
   <div *ngIf="role === 'Admin'">
     <button mat-button routerLink="/admin/orders" routerLinkActive="active">
-      Užsakymai
+      Orders
     </button>
     <button mat-button routerLink="/admin/users" routerLinkActive="active">
-      Vartotojai
+      Users
     </button>
     <button mat-button routerLink="/admin/suppliers" routerLinkActive="active">
-      Tiekėjai
+      Suppliers
     </button>
     <button mat-button routerLink="/admin/pharmacies" routerLinkActive="active">
-      Vaistinės
+      Pharmacies
     </button>
   </div>
 
@@ -24,10 +24,10 @@
       routerLink="/pharmacist/orders"
       routerLinkActive="active"
     >
-      Užsakymai
+      Orders
     </button>
     <button mat-button routerLink="/pharmacist/stock" routerLinkActive="active">
-      Likučiai
+      Stock
     </button>
     <button
       mat-button
@@ -44,7 +44,7 @@
       routerLink="/delivery-man/orders"
       routerLinkActive="active"
     >
-      Užsakymai
+      Orders
     </button>
   </div>
 
@@ -54,13 +54,13 @@
       routerLink="/storeman/medicine-list"
       routerLinkActive="active"
     >
-      Vaistai
+      Medicaments
     </button>
     <button mat-button routerLink="/storeman/orders" routerLinkActive="active">
-      Užsakymai
+      Orders
     </button>
     <button mat-button routerLink="/storeman/stock" routerLinkActive="active">
-      Likučiai
+      Stock
     </button>
   </div>
   <span class="spacer"></span>
