--- a/src/app/app-header/header.component.html
+++ b/src/app/app-header/header.component.html
@@ -16,6 +16,9 @@
     <button mat-button routerLink="/admin/pharmacies" routerLinkActive="active">
       Pharmacies
     </button>
+    <button mat-button routerLink="/admin/messages" routerLinkActive="active">
+      Messages
+    </button>
   </div>
 
   <div *ngIf="role === 'Pharmacy'">
@@ -34,7 +37,7 @@
       routerLink="/pharmacist/analytics"
       routerLinkActive="active"
     >
-      Apyvarta
+      Messages
     </button>
   </div>
 
