--- a/src/app/pharmacist/analytics/analytics.component.html
+++ b/src/app/pharmacist/analytics/analytics.component.html
@@ -1,3 +1,49 @@
 <mat-card class="display-card">
-    <h1>Vaistininko apyvartos forma</h1>
+  <h1>Žinučių sąrašas</h1>
 </mat-card>
+<button
+  *ngIf="role == 'Pharmacy'"
+  mat-flat-button
+  color="primary"
+  (click)="newMessage()"
+>
+  New Message
+</button>
+<table mat-table [dataSource]="messageList" class="mat-elevation-z8">
+  <ng-container matColumnDef="author">
+    <th mat-header-cell *matHeaderCellDef>Author</th>
+    <td mat-cell *matCellDef="let message">{{ message.author }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let message">{{ message.date }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="text">
+    <th mat-header-cell *matHeaderCellDef>Text</th>
+    <td mat-cell *matCellDef="let message">{{ message.text }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="topic">
+    <th mat-header-cell *matHeaderCellDef>Topic</th>
+    <td mat-cell *matCellDef="let message">{{ message.topic }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="center">Action</th>
+    <td mat-cell *matCellDef="let message" class="center">
+      <!-- <button
+            mat-flat-button
+            color="primary"
+            (click)="changemessageStatus(message.id)"
+          >
+            Change Status
+          </button> -->
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-spinner *ngIf="!messageList"></mat-spinner>
