--- a/src/app/pharmacist/analytics/analytics.component.html
+++ b/src/app/pharmacist/analytics/analytics.component.html
@@ -1,5 +1,5 @@
 <mat-card class="display-card">
-  <h1>Žinučių sąrašas</h1>
+  <h1>Message List</h1>
 </mat-card>
 <button
   *ngIf="role == 'Pharmacy'"
