--- a/src/app/pharmacist/stock/stock.component.html
+++ b/src/app/pharmacist/stock/stock.component.html
@@ -1,5 +1,5 @@
 <mat-card class="display-card">
-  <h1>Vaistininko likučių sąrašas</h1>
+  <h1>Pharmacy Stock</h1>
 </mat-card>
 <table mat-table [dataSource]="stockList" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
