--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,3 @@
 <mat-card class="display-card">
-  <h1>Sveiki, jūs prisijungėtė kaip {{ user.role }}</h1>
+  <h1>Hello, you are loged in as {{ user.role }}</h1>
 </mat-card>
