--- a/src/app/pharmacist/orders/orders.component.html
+++ b/src/app/pharmacist/orders/orders.component.html
@@ -38,13 +38,13 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef class="center">Action</th>
     <td mat-cell *matCellDef="let order" class="center">
-      <!-- <button
+      <button
         mat-flat-button
         color="primary"
         (click)="getOrderInformation(order.id)"
       >
         More information
-      </button> -->
+      </button>
     </td>
   </ng-container>
 
