--- a/src/app/storeman/orders/orders.component.html
+++ b/src/app/storeman/orders/orders.component.html
@@ -34,15 +34,39 @@
   </ng-container>
 
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef class="center">Action</th>
+    <th mat-header-cell *matHeaderCellDef class="center"></th>
     <td mat-cell *matCellDef="let order" class="center">
       <button
-        mat-flat-button
-        color="primary"
-        (click)="getOrderInformation(order.id)"
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Example icon-button with a menu"
       >
-        More information
+        <mat-icon>more_vert</mat-icon>
       </button>
+      <mat-menu #menu="matMenu">
+        <button (click)="getOrderInformation(order.id)" mat-menu-item>
+          More Information
+        </button>
+        <button
+          *ngIf="order.status != 'Prepared' && order.status != 'Delivering'"
+          (click)="changeStatus(order.id)"
+          mat-menu-item
+        >
+          Change Status
+        </button>
+        <button
+          *ngIf="
+            order.status != 'Waiting' &&
+            order.status != 'Preparing' &&
+            order.status != 'Canceled'
+          "
+          (click)="cancelOrder(order.id)"
+          mat-menu-item
+          class="cancel-button"
+        >
+          Cancel Order
+        </button>
+      </mat-menu>
     </td>
   </ng-container>
 
